[package]
name = "perfect_stealth_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Media_MediaFoundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
] }
rand = "0.8"
rand_chacha = "0.3"
obfstr = "0.4"

[build-dependencies]
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
